Configurar conexion a base de datos por variables de entorno